// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.confidential_match.mrp.api;

option java_package = "com.google.cm.mrp.backend";
option java_outer_classname = "EncodingTypeProto";

// The type of encoding for hashed and/or encrypted bytes
enum EncodingType {
  UNSPECIFIED = 0;
  BASE64 = 1; // Default
  HEX = 2;
}
